# debug_tool

./: README.md  package.xml  setup.cfg  setup.py
config/: synchronized_topics.yaml
debug_tool/: control_svo_node.py  sync_node.py
examples/person_walking_demo/: synchronized_topics.yaml
examples/person_walking_demo/rosbag2_person_walking_demo/: metadata.yaml  rosbag2_person_walking_demo.db3
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/debug_tool/lib/debug_tool/: control_svo_node  sync_node
install/debug_tool/share/debug_tool/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: launch_sync_node.launch.py  replay_svo_demo.launch.py  sync_node_demo.launch.py
log/: latest_build
ros2_replay_data/: control_svo_node.py  sync_node.py  sync_node_test.py
rviz/: replay_svo.rviz  replay_svo_sync.rviz  replay_svo_warehouse_sync.rviz
