<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_replay_data</name>
  <version>0.0.0</version>
  <description>Tool allowing to replay data with the ZED ROS Wrapper (Data Debugging Workflow)</description>
  <maintainer email="rodolphe.perrin@stereolabs.com">user</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>rclcpy</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
